Fix <div> in footer sections

--- a/0x00-html_advanced/16-index.html
+++ b/0x00-html_advanced/16-index.html
@@ -148,6 +148,8 @@
 				</div>
 			</section>
 		</main>
-		<footer>Footer</footer>
+		<footer>
+			<div>Footer</div>
+		</footer>
 	</body>
 </html>
