--- a/0x00-html_advanced/17-index.html
+++ b/0x00-html_advanced/17-index.html
@@ -158,6 +158,8 @@
 			</section>
 		</main>
 		<!-- Footer -->
-		<footer>Footer</footer>
+		<footer>
+			<div>Footer</div>
+		</footer>
 	</body>
 </html>
