--- a/0x00-html_advanced/about.html
+++ b/0x00-html_advanced/about.html
@@ -160,6 +160,8 @@
 			</section>
 		</main>
 		<!-- Footer -->
-		<footer>Footer</footer>
+		<footer>
+			<div>Footer</div>
+		</footer>
 	</body>
 </html>
