--- a/0x00-html_advanced/24-index.html
+++ b/0x00-html_advanced/24-index.html
@@ -114,7 +114,7 @@
                     <div>
                         <article>
                             <p>Career</p>
-                            <a href="#"><h3>Hoc loco tenere se Triarius non potuit.</h3></a>
+                            <h3><a href="#">Hoc loco tenere se Triarius non potuit.</a></h3>
                             <p>
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat.
                                 Quo tandem modo? At eum nihili facit; Quae contraria sunt his, malane?
@@ -122,7 +122,7 @@
                         </article>
                         <article>
                             <p>Digital Life</p>
-                            <a href="#"><h3>Ut alios omittam, hunc appello, quem ille unum secutus est.</h3></a>
+                            <h3><a href="#">Ut alios omittam, hunc appello, quem ille unum secutus est.</a></h3>
                             <p>
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tum mihi Piso: Quid ergo? Tum
                                 ille: Ain tandem? Non autem hoc: igitur ne illud quidem. Sed quod proximum fuit non
@@ -131,7 +131,7 @@
                         </article>
                         <article>
                             <p>Social</p>
-                            <a href="#"><h3>Bestiarum vero nullum iudicium puto.</h3></a>
+                            <h3><a href="#">Bestiarum vero nullum iudicium puto.</a></h3>
                             <p>
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non igitur bene. Quid enim est
                                 a Chrysippo praetermissum in Stoicis? Pugnant Stoici cum Peripateticis. Prioris generis
