--- a/0x00-html_advanced/styleguide.html
+++ b/0x00-html_advanced/styleguide.html
@@ -190,11 +190,12 @@
                 <header>
                     <h2>Video</h2>
                 </header>
-                <video controls loop poster="https://intranet-projects-files.s3.amazonaws.com/webstack/thumbnail.jpg">
-                    <source
-                        src="https://intranet-projects-files.s3.amazonaws.com/webstack/BigBuckBunny.mp4"
-                        type="video/mp4"
-                    />
+                <video
+                    controls
+                    loop
+                    poster="https://intranet-projects-files.s3.amazonaws.com/webstack/thumbnail.jpg"
+                    src="https://intranet-projects-files.s3.amazonaws.com/webstack/BigBuckBunny.mp4"
+                >
                     Sorry, your browser doesn't support HTML5 video
                 </video>
             </section>
@@ -203,11 +204,10 @@
                 <header>
                     <h2>Audio</h2>
                 </header>
-                <audio controls>
-                    <source
-                        src="https://intranet-projects-files.s3.amazonaws.com/webstack/TroubleChapter8_64kb.mp3"
-                        type="audio/mp3"
-                    />
+                <audio
+                    controls
+                    src="https://intranet-projects-files.s3.amazonaws.com/webstack/TroubleChapter8_64kb.mp3"
+                >
                     Sorry, your browser doesn't support audio element
                 </audio>
             </section>
