--- a/0x02-CSS_advanced/index.html
+++ b/0x02-CSS_advanced/index.html
@@ -10,7 +10,7 @@
             href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Raleway:700&display=swap"
             rel="stylesheet"
         />
-        <link rel="stylesheet" href="#" />
+        <link rel="stylesheet" href="styles/32-style.css" />
     </head>
     <body>
         <!-- Header -->
