Change autocomplete to "on" instead of fieldname

--- a/0x05-form/04-article.html
+++ b/0x05-form/04-article.html
@@ -220,7 +220,7 @@
                                                 placeholder="e.g. Mike"
                                                 pattern="[A-Za-zÀ-ž\s]{3,}"
                                                 maxlength="35"
-                                                autocomplete="given-name"
+                                                autocomplete="on"
                                                 accesskey="f"
                                                 required
                                             />
@@ -238,7 +238,7 @@
                                                 placeholder="e.g. Smith"
                                                 pattern="[A-Za-zÀ-ž\s]{3,}"
                                                 maxlength="40"
-                                                autocomplete="family-name"
+                                                autocomplete="on"
                                                 accesskey="l"
                                                 required
                                             />
@@ -256,7 +256,7 @@
                                                 placeholder="e.g. youremail@gmail.com"
                                                 pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$"
                                                 maxlength="55"
-                                                autocomplete="email"
+                                                autocomplete="on"
                                                 accesskey="e"
                                                 required
                                             />
