--- a/0x05-form/04-article.html
+++ b/0x05-form/04-article.html
@@ -220,7 +220,7 @@
                                                 placeholder="e.g. Mike"
                                                 pattern="[A-Za-zÀ-ž\s]{3,}"
                                                 maxlength="35"
-                                                autocomplete="on"
+                                                autocomplete="given-name"
                                                 accesskey="f"
                                                 required
                                             />
@@ -238,7 +238,7 @@
                                                 placeholder="e.g. Smith"
                                                 pattern="[A-Za-zÀ-ž\s]{3,}"
                                                 maxlength="40"
-                                                autocomplete="on"
+                                                autocomplete="family-name"
                                                 accesskey="l"
                                                 required
                                             />
@@ -256,7 +256,7 @@
                                                 placeholder="e.g. youremail@gmail.com"
                                                 pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$"
                                                 maxlength="55"
-                                                autocomplete="on"
+                                                autocomplete="email"
                                                 accesskey="e"
                                                 required
                                             />
@@ -289,8 +289,8 @@
                                     <div class="form-field">
                                         <span class="form-field-container">
                                             <textarea
-                                                name="your-content"
-                                                id="your-content"
+                                                name="your-comment"
+                                                id="your-comment"
                                                 placeholder="Write your comment here"
                                                 minlength="10"
                                                 accesskey="c"
