--- a/0x07-accessibility/fix-a11y/08-index.html
+++ b/0x07-accessibility/fix-a11y/08-index.html
@@ -165,7 +165,7 @@
                             </div>
                         </div>
                         <div class="bottom-part">
-                            <h3>$199.00</h3>
+                            <span>$199.00</span>
                             <a href="#">Buy Now</a>
                         </div>
                     </div>
