--- a/0x0D-JQuery_advanced/4-index.html
+++ b/0x0D-JQuery_advanced/4-index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
     <head>
         <meta charset="utf-8" />
-        <title>Task 3</title>
+        <title>Task 4</title>
 
         <script
             src="https://code.jquery.com/jquery-3.6.0.slim.min.js"
@@ -31,7 +31,16 @@
                 $("tr td").eq(5).text("Salva");
             }
 
+            function replaceFamilyTree() {
+                $("tbody").html(`
+                <tr>
+                    <td>Gerard</td>
+                    <td>Bonissa</td>
+                </tr>`);
+            }
+
             createFamilyTree();
+            replaceFamilyTree();
         </script>
     </body>
 </html>
