--- a/0x0E-Cookies_local_storage/7-index.html
+++ b/0x0E-Cookies_local_storage/7-index.html
@@ -18,7 +18,107 @@
             }
 
             function getCartFromStorage() {
-                const storage = sessionStorage;
+                const json = sessionStorage.getItem("cart");
+
+                if (json) {
+                    return JSON.parse(json);
+                } else {
+                    return {};
+                }
+            }
+
+            function addItemToCart(item) {
+                var cart = getCartFromStorage();
+
+                if (cart[item] >= 1) {
+                    cart[item] += 1;
+                } else {
+                    cart[item] = 1;
+                }
+
+                sessionStorage.setItem("cart", JSON.stringify(cart));
+                displayCart();
+            }
+
+            function removeItemfromCart(item) {
+                var cart = getCartFromStorage();
+
+                if (cart[item]) delete cart[item];
+                sessionStorage.setItem("cart", JSON.stringify(cart));
+                displayCart();
+            }
+
+            function clearCart() {
+                sessionStorage.clear();
+                displayCart();
+            }
+
+            function createStore() {
+                const h2 = document.createElement("h2");
+                h2.textContent = "Available products:";
+                document.body.append(h2);
+
+                const ul = document.createElement("ul");
+
+                for (let item of availableItems) {
+                    const li = document.createElement("li");
+                    li.textContent = item;
+                    li.addEventListener("click", () => addItemToCart(item));
+                    ul.append(li);
+                }
+
+                document.body.append(ul);
+            }
+
+            function displayCart() {
+                const h2 = document.getElementById("cartID");
+                if (h2) h2.remove();
+
+                const newH2 = document.createElement("h2");
+                newH2.setAttribute("id", "cartID");
+                newH2.textContent = "Your cart:";
+
+                const div = document.getElementById("cart");
+                if (div) div.remove();
+
+                const newDiv = document.createElement("div");
+                newDiv.setAttribute("id", "cart");
+                document.body.append(newH2);
+                document.body.append(newDiv);
+
+                updateCart();
+            }
+
+            function updateCart() {
+                const cart = getCartFromStorage();
+                const ul = document.createElement("ul");
+                if (Object.keys(cart).length == 0) {
+                    const li = document.createElement("li");
+                    li.textContent = "Your cart is empty";
+                    ul.append(li);
+                } else {
+                    const clear = document.createElement("li");
+                    clear.textContent = "Clear my cart";
+                    clear.addEventListener("click", clearCart);
+                    ul.append(clear);
+
+                    for (let item in cart) {
+                        if (cart[item] >= 1) {
+                            const li = document.createElement("li");
+                            const str = item + " x " + cart[item] + " ";
+                            li.textContent = str;
+
+                            const remove = document.createElement("span");
+                            remove.textContent = "(remove)";
+                            remove.addEventListener("click", () => removeItemfromCart(item));
+
+                            li.append(remove);
+                            ul.append(li);
+                        }
+                    }
+                }
+
+                document.getElementById("cart").append(ul);
             }
         </script>
     </body>
